stylesheet.css
body,
.wrapper {
  min-height: 100vh;
  min-width: 100vw;
}

* {
  box-sizing: border-box;
}

.wrapper {
  display: grid;
  gap: 5px;
  grid-template-columns: repeat(2, minmax(10px, 1fr));
  grid-template-rows: 10% 30% repeat(1, minmax(10px, 1fr));
  background-color: #222224;
  color: white;
}

.header {
  grid-column: 1 / 3;
  place-self: center;
}

.book-information {
  display: grid;
  grid-column: 1 / 3;
  place-self: center;

  padding: 20px;
}

.book-information > form {
  display: grid;
}

.book-information > form > button {
  max-width: 100px;
  max-height: 50px;
}

